--- a/client/routes/Player/styles.module.css
+++ b/client/routes/Player/styles.module.css
@@ -40,6 +40,43 @@
   line-height: 0;
 }
 
+.controls .volume {
+  cursor: pointer;
+  line-height: 0;
+  margin-right: 15px;
+  position: relative;
+}
+
+.controls .volume .seekContainer {
+  position: absolute;
+  background-color: black;
+  border-radius: 5px;
+  width: 35px;
+  height: 80px;
+  left: -5px;
+  top: -115px;
+  display: flex;
+  justify-content: center;
+  padding: 10px 0;
+}
+
+.controls .volume .seekBar {
+  width: 5px;
+  height: 100%;
+  background-color: rgb(255, 255, 255, .3);
+  border-radius: 5px;
+  position: relative;
+}
+
+.controls .volume .slider {
+  width: 5px;
+  height: 0%;
+  background-color: white;
+  border-radius: 5px;
+  position: absolute;
+  bottom: 0;
+}
+
 .controls .progressBar {
   width: 100%;
   height: 5px;
