--- a/client/Player/styles.module.css
+++ b/client/Player/styles.module.css
@@ -1,3 +1,5 @@
+
+
 .video {
   position: absolute;
   top: 0;
@@ -30,91 +32,6 @@
   background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
 }
 
-.controls .play {
-  cursor: pointer;
-  line-height: 0;
-}
-
-.controls .fullscreen {
-  cursor: pointer;
-  line-height: 0;
-}
-
-.controls .volume {
-  cursor: pointer;
-  line-height: 0;
-  margin-right: 15px;
-  position: relative;
-}
-
-.controls .volume .seekContainer {
-  position: absolute;
-  background-color: black;
-  border-radius: 5px;
-  width: 35px;
-  height: 80px;
-  left: -5px;
-  top: -115px;
-  display: flex;
-  justify-content: center;
-  padding: 10px 0;
-}
-
-.controls .volume .seekBar {
-  width: 5px;
-  height: 100%;
-  background-color: rgb(255, 255, 255, .3);
-  border-radius: 5px;
-  position: relative;
-}
-
-.controls .volume .slider {
-  width: 5px;
-  height: 0%;
-  background-color: white;
-  border-radius: 5px;
-  position: absolute;
-  bottom: 0;
-}
-
-.controls .progressBar {
-  width: 100%;
-  height: 5px;
-  background-color: rgba(255, 255, 255, 0.3);
-  border-radius: 5px;
-  cursor: pointer;
-  margin: 0 20px;
-  position: relative;
-}
-
-.controls .progressBar .progress {
-  width: 0%;
-  height: 5px;
-  background-color: white;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.controls .time {
-  position: absolute;
-  top: -25px;
-  right: 0;
-  color: white;
-  font-size: 16px;
-}
-
-.controls .fileName {
-  position: absolute;
-  top: -25px;
-  left: 0;
-  color: white;
-  font-size: 16px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  max-width: 80%;
-}
-
 .bigPlay {
   position: absolute;
   width: 100%;
@@ -132,4 +49,28 @@
   background-color: rgba(0, 0, 0, .9);
   border-radius: 50%;
   line-height: 0;
+}
+
+.castCover {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #292929;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: center;
+  color: white;
+  flex-direction: column;
+}
+
+.castCover .coverIcon {
+  font-size: 100px;
+}
+
+.castCover .text {
+  font-size: 20px;
+  margin-top: 10px;
 }
